--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -90,7 +90,9 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/leaflet/dist/leaflet.css"
+              
             ],
             "scripts": []
           }
