--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -92,7 +92,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "./node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css"
               
             ],
             "scripts": []
