--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.3",
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
