--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@types/leaflet.markercluster": "^1.4.6",
     "@zxing/browser": "0.0.10",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.3.0",
