--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
+    "ngx-webcam": "^0.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
