--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,20 +16,20 @@
     "express": "~4.16.1",
     "fs": "0.0.1-security",
     "g": "^2.0.1",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "ionic": "^5.4.16",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.1.4",
+    "mongoose": "^5.13.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "node-fetch": "2.6.1",
     "nodemon": "^2.0.15",
     "request": "^2.88.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.13.7",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
-    "stream": "0.0.2",
-    "gridfs-stream": "^1.1.1"
+    "stream": "0.0.2"
   }
 }
