--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "express": "~4.16.1",
     "fs": "0.0.1-security",
     "g": "^2.0.1",
+    "geojson": "^0.5.0",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "ionic": "^5.4.16",
