--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
     "@angular/service-worker": "~13.0.3",
+    "@turf/turf": "^6.5.0",
     "@types/leaflet.markercluster": "^1.4.6",
     "@zxing/browser": "0.0.10",
     "@zxing/library": "^0.18.6",
