--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,11 @@
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.3.0",
     "angularx-qrcode": "^11.0.0",
+    "dexie": "^3.2.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
+    "ngx-indexed-db": "^9.4.2",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
