--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "@zxing/browser": "0.0.10",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.3.0",
+    "angular2-uuid": "^1.1.1",
     "angularx-qrcode": "^11.0.0",
+    "dexie": "^3.2.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
