--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,11 @@
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
+    "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-indexed-db": "^9.4.2",
     "ngx-webcam": "^0.4.1",
+    "recordrtc": "^5.6.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
