--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,12 @@
     "angular2-uuid": "^1.1.1",
     "angularx-qrcode": "^11.0.0",
     "dexie": "^3.2.0",
+    "file-saver": "^2.0.5",
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.29.1",
+    "ng2-file-upload": "^1.4.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-filesaver": "^13.0.0",
     "ngx-indexed-db": "^9.4.2",
