--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "ngx-filesaver": "^13.0.0",
     "ngx-indexed-db": "^9.4.2",
     "ngx-mat-select-search": "^3.3.3",
+    "ngx-pagination": "^5.1.1",
     "ngx-webcam": "^0.4.1",
     "recordrtc": "^5.6.2",
     "rxjs": "~7.4.0",
