--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,11 @@
     "mat-select-filter": "^2.4.0",
     "mat-select-search": "^1.1.3",
     "moment": "^2.29.1",
+    "ng-circle-progress": "^1.6.0",
     "ng2-file-upload": "^1.4.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-awesome-uploader": "^13.0.0",
+    "ngx-clipboard": "^15.0.1",
     "ngx-filesaver": "^13.0.0",
     "ngx-indexed-db": "^9.4.2",
     "ngx-mat-select-search": "^3.3.3",
