--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "dexie": "^3.2.0",
     "file-saver": "^2.0.5",
     "geojson": "^0.5.0",
+    "http-server": "^14.1.0",
     "leaflet": "^1.7.1",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet.markercluster": "^1.5.3",
